# face_recognition_cpp

./: .gitignore  CMakeLists.txt  main.cpp
assets/: c_model.tflite  mb_face_net.tflite  name.txt
common_lib/: CMakeLists.txt  common_lib.cpp
include/opencv/opencv2/: opencv_modules.hpp
